feat: /history endpoints
