# src/history/types.ts
@@ -1,0 +1,3 @@
+import { Language, Time, Year } from '@spio-wyin/wyin-sdk-feed';
+
+export { Language, Time, Year };
